2000-11-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: ([-_getReplyRmc:]) added semi-busy wait
	for when the connection is being used from multiple threads.

2000-11-15  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.in: Added checks for OpenSSL
	* Headers/gnustep/base/NSFileHandle.h: Added info for SSL handles.
	* Source/UnixFileHandle.m: Added GSUnixSSLHandle class based on
	code by <mark@brainstorm.co.uk>

2000-11-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Minor tidying to avoid compiler warnings.
	* Source/NSFileManager.m: ditto

Tue Nov 14 23:44:14 2000  Adam Fedor  <fedor@yogi.doc.com>

	* Source/GSString.m: Add limits.h (for Solaris)

2000-11-14  Adam Fedor  <fedor@gnu.org>

	* Source/GSLocale.m: Put LANGINFO_H ifdefs around include of
	langinfo.h.

2000-11-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: ([GSTcpHandle -receivedEvent:type:extra:forMode:])
	added locks around write operations for multi-threaded operation.
	newDataWithEncodedPort() modified to encode local host as an empty
	string, and other hosts by name rather than address.
	decodePort() added new parameter so that an empty string can be
	decoded as the host to which the GSTcpHandle is talking.
	Modified in various places to keep a record of the IP address of the
	remote end of the connection, so we can pass this to decodePort()
	([-getFds:count:]) fixed error in determining set of file descriptors
	to listen to - resulted in two threads listening to the same descriptor
	at the same time!

2000-11-13  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSGAttributedString.m: partial rewrite to cache/unique
	dictionaries and to coalesce adjacent regions of string with the
	same attributes when setting attributes.

2000-11-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSArray.m: Corrected [NSMutableArray arrayWithObject:] to
	return obj instead of self.
	
Fri Nov 10 12:30:27 2000  Nicola Pero  <n.pero@mi.flashnet.it>
